docs/app/global.css
@import 'tailwindcss';
@import 'fumadocs-ui/css/neutral.css';
@import 'fumadocs-ui/css/preset.css';

@theme {
  --color-fernwaerts-primary: #23AE54; 
  --color-fernwaerts-secondary: #EDBB32; 
  --color-fernwaerts-primary-accent: #23c35b;
  --color-fernwaerts-secondary-accent: #f8cb4f;
}

:root {  
    --color-fd-primary: #23AE54;
    --color-fd-accent: #EDBB32;
}

html,
body {
    overflow-x: clip;
}

.home-globe-map .mapboxgl-ctrl-logo {
    margin-bottom: 5.5rem;
}

